@@ -24,10 +24,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
-import org.apache.http.client.HttpClient;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
+import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.apache.solr.client.solrj.request.CoreAdminRequest.RequestRecovery;
 import org.apache.solr.common.cloud.ZkCoreNodeProps;
 import org.apache.solr.common.cloud.ZkNodeProps;
@@ -55,7 +54,7 @@ public class SyncStrategy {
 
   private volatile boolean isClosed;
 
-  private final HttpClient client;
+  private final Http2SolrClient solrClient;
 
   private final ExecutorService updateExecutor;
 
@@ -69,7 +68,7 @@ public class SyncStrategy {
 
   public SyncStrategy(CoreContainer cc) {
     UpdateShardHandler updateShardHandler = cc.getUpdateShardHandler();
-    client = updateShardHandler.getDefaultHttpClient();
+    solrClient = updateShardHandler.getRecoveryOnlyHttpClient();
     shardHandler = cc.getShardHandlerFactory().getShardHandler();
     updateExecutor = updateShardHandler.getUpdateExecutor();
   }
@@ -361,12 +360,11 @@ public class SyncStrategy {
               RequestRecovery recoverRequestCmd = new RequestRecovery();
               recoverRequestCmd.setAction(CoreAdminAction.REQUESTRECOVERY);
               recoverRequestCmd.setCoreName(coreName);
-
               try (SolrClient client =
-                  new HttpSolrClient.Builder(baseUrl)
-                      .withHttpClient(SyncStrategy.this.client)
+                  new Http2SolrClient.Builder(baseUrl)
+                      .withHttpClient(solrClient)
                       .withConnectionTimeout(30000, TimeUnit.MILLISECONDS)
-                      .withSocketTimeout(120000, TimeUnit.MILLISECONDS)
+                      .withIdleTimeout(120000, TimeUnit.MILLISECONDS)
                       .build()) {
                 client.request(recoverRequestCmd);
               } catch (Throwable t) {
